fix: double scroll bar on modal

--- a/src/components/CalendarModal.module.css
+++ b/src/components/CalendarModal.module.css
@@ -111,7 +111,6 @@
   }
 
   .content {
-    overflow: auto;
     -webkit-overflow-scrolling: touch;
   }
 }
